--- a/day one/notes.css
+++ b/day one/notes.css
@@ -1,4 +1,10 @@
 body{
-    background-image: linear-gradient(
-    );
+    background-image: url(fall.jpg) 
+    /* linear-gradient(to right bottom) */
+
+    /* background-image: linear-gradient( */
+        
+}
+.test {
+    color :yellow;
 }
