--- a/Original/style.css
+++ b/Original/style.css
@@ -31,3 +31,66 @@ img{
     color :red;
     background-color: black;
 }
+
+
+
+
+
+html{
+    margin: 0;
+    padding: 0;
+    font-size: 62.5%;
+    box-sizing: border-box;
+}
+div{
+    background-image: linear-gradient(to right bottom,
+    rgba(170, 165, 162, 0.4),
+    rgba(170, 165, 162, 0.4)
+    ),  url(mountains.jpg);
+     height:100vh ;  
+     background-size: cover;
+     margin: 1rem;
+}
+
+
+
+h1{
+    font-size: 5.0rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 3rem;
+    text-align: center; 
+    font-family: 'Pacifico', cursive;
+}
+
+
+
+.border{
+    position: absolute;
+    border: 1rem solid white;
+    padding: .5rem; 
+    left: 32%;
+    top: 32%;
+    width: 50rem;
+  }
+
+
+
+  h2{
+    position: absolute;
+    left: 40%;
+    top: 48%;
+    font-size: 4.0rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    z-index: 2;
+    text-decoration: underline overline;
+
+  }
+
+
+
+  #color{
+      color: white;
+  }
+
+ 
