--- a/sccs-flexbox/sccs/_header.scss
+++ b/sccs-flexbox/sccs/_header.scss
@@ -1,3 +1,14 @@
-.header{
-    
+// separate stuf using small functions
+
+@mixin flexCenter($direction, $background) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: $direction;
+    background: $background;
+     
+}
+header{
+        @include flexCenter(column, red);
+        height: 100vh;
 }
