--- a/sccs-flexbox/sccs/style.scss
+++ b/sccs-flexbox/sccs/style.scss
@@ -1,10 +1,9 @@
-// @import "./_header.scss";
+@import "./header";
 
 
-
-// $colors:(
-//     primary: #333
-// );
+ $colors:(
+    primary: #333
+);
 
 
 // @function color($color-name){
@@ -21,7 +20,12 @@
 // $padding: 1.5rem;
 
 // flex mdn
-// what the flexbox
+// what the flexbox, 
+
+
+
+
+
 .flex-parent{
     height: 60vh;
     background-color: blue;
@@ -43,4 +47,9 @@
 }
 #flex-grow-2{
     flex-grow: 2;
+}
+
+
+.contact{
+    @extend header;
 }
