--- a/sccs-flexbox/sccs/_header.scss
+++ b/sccs-flexbox/sccs/_header.scss
@@ -8,7 +8,7 @@
     background: $background;
      
 }
-header{
-        @include flexCenter(column, red);
-        height: 100vh;
-}
+// header{
+//         @include flexCenter(column, red);
+//         height: 100vh;
+// }
